<resources>
    <string name="app_name">Steyn Entertainment</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_members">Members</string>
    <string name="title_aboutUs">About Us</string>
    <string name="title_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid e-mail</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Re-Type Password</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="google_login">"Google Login"</string>
    <string name="facebook_login">"Facebook Login"</string>
    <string name="twitter_login">"Twitter Login"</string>
    <string name="preview">Preview</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="eventInfo">Event Info</string>

    <string name="lorem_ipsum">

    </string>

    <string name="homeMessage">"Welcome to South Africa's Leading Entertainment Hub"</string>


    <string name="register_failed" />
    <string name="password_mismatch">Passwords Don\'t Match</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="retypeEmailAddress">Re-Type Email Address</string>
    <string name="web_client_id">272896532211-ij5hohp6hk5cnniv2qv45cog3ohrltt7.apps.googleusercontent.com</string>
    <string name="failed_to_update_profile">Failed to update profile</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="firestore_error">Could not add user information</string>
    <string name="firestore_success">Add user information successfully</string>
    <string name="email_not_verified">Error logging in</string>
    <string name="email_not_verified_resend"><![CDATA[Please verify your email address>]]></string>
    <string name="email_resend_failed">Failed</string>

    <!-- Strings for profile and about us fragments-->
    <string name="updateMyInfo">Update my Info</string>
    <string name="changeImageBtn">Change Picture</string>
    <string name="aboutUsHeader">About Us</string>
    <string name="curatedCultureHeader">curated culture</string>
    <string name="cutared_text">Based in Johannesburg, Steyn Entertainment
                                is a global multi-disciplinary organization
                                committed to developing and connecting
                                Africa to the rest of the world, in the arts and
                                entertainment arenas.\n\n
                                Our current dynamically diverse portfolio
                                includes record label and management
                                company STAY LOW, global music festival
                                ROCKING THE DAISIES, leading creative and
                                entrepreneurial hub MARKET UP, and inner-
                                city art hotel HALLMARK HOUSE, along with
                                its unique in-house offerings MARABI CLUB,
                                THORN, CUTTERS and ROOFTOP at
                                HALLMARK venue. </string>
    <string name="rocking_daisies_info">Rocking the Daisies Info</string>
    <string name="events_touring_info">Events and Touring Info</string>
    <string name="get_intouch_text">Get in touch</string>
    <string name="city_text">In The City was established in 2012 and has evolved
                             over the the years into more than just a music festival.
                             It is the cultural intersection where street culture, inclusivity,
                             self\nexpression and good vibes meet.\n\nNo matter how different we are from each other, there is a rhythm that unifies us.
                            It is in the neighbourhood hadeda alarm clock that we all love to hate it’s in the
                            sounds of the ever-bustling streets, and the roaring laughter and chatter that comes
                            from our pubs, clubs and shebeens.\n\n
                            Music has the ability to unify people from all walks of life.  was established in 2012
                            and has evolved over the years into more than just a music festival. It is the cultural
                            intersection where street culture, inclusivity, self-expression and good vibes meet and
                            after an unprecedented hiatus,  is finally BACK!!! . . . but with a twist!\n\n
                            In The City is no longer a strictly Johannesburg based festival and instead
                            will be expanded into the rest of South Africa and beyond. Our aim is to provide
                            music lovers with an immersive music and cultural experience. Each event will
                            represent a different genre of music which will be dictated by the selected
                            International headliner.</string>
    <string name="city_text2">In The City Info</string>
    <string name="city_text4">+27 10 591 2879\n
                             54 Siemert Road,\n
                             New Doornfontein,\n
                             Johannesburg</string>

    <string name="daisies_contact_info">+27 82 443 5025\n
                             54 Siemert Road,\n
                             New Doornfontein,\n
                             Johannesburg</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rock_daisies_text">Rocking Since Since…\n\n
        You know the pure, simplistic joy of finding a forgotten loose R100 in the pocket of your old jeans
        while doing your laundry? Yeah, that feeling is Daisies; but with a lot less detergent,
        plenty of sun and the best live soundtrack you have ever heard.\n\nStarting out in the world-
        famous winelands of the Western Cape in South Africa back when Diddy was still Puff Daddy,
        over the span of almost two decades our three-day festival has expanded to include Johannesburg.\n\nThrough it all, we’ve always been about the music.\n\n
        Skinny jeans came, left and returned again; Barney the Dinosaur had enough and called it quits;
        we’ve even found a way to send pizza to the moon. But whether it was giving a platform to a
        promising hometown garage band, or capturing the biggest artist in the world during their iconic
        run, we’ve always just been about the music… and its magically transcendent ability to unify
        people of all walks of life from every corner of the world.\n\nReflecting the present and
        curating the future, Steyn Entertainment – the company behind Rocking the Daisies – is committed
        to developing, supporting and cultivating quality, multi-sensory cultural experiences, in the
        interest of maintaining that R100-laundry type joy through music and love.  </string>
    <string name="get_in_touch_header">get in touch</string>
    <string name="get_in_touch_body">Looking to get in touch with us? Let us know how we can help you!</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">E-mail</string>
    <string name="subject_text">Subject</string>
    <string name="message_text">Message</string>
    <string name="send_message">Send a Message</string>
    <string name="email_info_text">Or send us an email on \ninfo@steynentertainment.com</string>

    <string name="view_rewards">View my rewards</string>
    <string name="title_get_in_touch">Get In Touch</string>
    <string name="events_touring">Events and Touring</string>
    <string name="events_and_touring">Events and touring</string>
    <string name="ourServicesTextView">Our Services</string>
    <string name="musicHeader">Music Festival</string>
    <string name="musicBodyText">Steyn Entertainment organizes major music festivals in South Africa
                                like Rocking the Daisies and In the City. These festivals bring together
                                popular musicians, artists, and attendees.</string>
    <string name="recordLabelInfo">Record label \n\nSteyn Entertainment operates a record label and artist management company called Stay Low that represents South African musical talent.</string>
    <string name="hospitalityInfo">Hospitality\n\nSteyn Entertainment owns and operates Hallmark House, an art hotel in Johannesburg. Hallmark House includes venues like the Marabi Jazz Club.</string>
    <string name="creativeAgencyInfo">Creative agency\n\nSteyn Entertainment has an in-house creative and marketing agency that provides branding, content, and campaigns for clients.</string>
    <string name="investmentInfo">Investment\n\nThe founders have investment companies focused on real estate, private equity, venture capital, healthcare, education technology, and more.</string>
    <string name="portfolioTitle">Portfolio</string>

    <string name="or_continue_with">Or Continue With</string>

</resources>