<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/calendar_day_solid"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_members"
        android:icon="@drawable/gem_regular"
        android:title="@string/title_members" />
    <item
        android:id="@+id/navigation_aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/info_solid"
        android:title="@string/title_aboutUs" />
    <item
        android:id="@+id/navigation_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/user_solid"
        android:title="@string/title_profile" />

</menu>