<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.steynentertainment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/fragment_admin_home"
        android:name="com.example.steynentertainment.ui.admin_home.AdminHomeFragment"
        android:label="Admin Home"
        tools:layout="@layout/fragment_admin_home"/>
    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.steynentertainment.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_members"
        android:name="com.example.steynentertainment.ui.members.MembersFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_members" />

    <fragment
        android:id="@+id/navigation_aboutUs"
        android:name="com.example.steynentertainment.ui.aboutUs.AboutUsFragment"
        android:label="@string/title_aboutUs"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.steynentertainment.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>