<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.eventsAndTouringFragment.EventsAndTouringFragment">

        <ImageView
            android:id="@+id/steynLogo"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/steynent_solid_logo" />

        <TextView
            android:id="@+id/eventsTouringHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/events_touring_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/headerTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steynLogo" />

        <TextView
            android:id="@+id/eventsTouringText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/musicBodyText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getInTouchBtn" />

        <TextView
            android:id="@+id/portfolioTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/portfolioTitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsTouringText" />

        <TextView
            android:id="@+id/eventsTouringText1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/recordLabelInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfolioTitle" />

        <TextView
            android:id="@+id/eventsTouringText2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/hospitalityInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsTouringText1" />

        <TextView
            android:id="@+id/eventsTouringText3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/creativeAgencyInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsTouringText2" />

        <TextView
            android:id="@+id/eventsTouringText4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:text="@string/investmentInfo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsTouringText3" />

        <TextView
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoLink="all"
            android:background="@drawable/rounded_border"
            android:padding="15dp"
            android:text="@string/city_text4"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventsTouringHeader" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getInTouchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:text="@string/get_intouch_text"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
